--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "core-js": "^2.6.5",
+    "d3": "^5.9.2",
+    "d3-tip": "^0.9.1",
     "iview": "^3.4.0",
     "lodash": "^4.17.11",
     "vue": "^2.6.10",
